[package]
name = "examples"
description = "Copied from ash, adapted to Vulkayes"
version = "0.1.0"
authors = ["TheEdward162 <TheEdward162@gmail.com>", "maik klein <maikklein@googlemail.com>"]
edition = "2018"

[dependencies.vulkayes-core]
path = "../vulkayes-core"
default-features = false
features = ["single_thread", "naive_device_allocator", "rust_host_allocator", "log_max_level_info"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 4
rpath = false

[dependencies]
image = "0.10.4"

#vulkayes-core = { path = "../vulkayes-core", features = ["single_thread"] }
vulkayes-window = { path = "../vulkayes-window", features = ["winit_window", "unix_use_xcb_default", "minifb_window"] }

edwardium_logger = "1.1"
