[package]
name = "examples"
description = "Copied from ash, adapted to Vulkayes"
version = "0.1.0"
authors = ["TheEdward162 <TheEdward162@gmail.com>", "maik klein <maikklein@googlemail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 4
rpath = false

[dependencies]
image = "0.24"

vulkayes-core = { git = "https://github.com/vulkayes/vulkayes-core", features = ["naive_device_allocator"] }
vulkayes-window = { path = "../vulkayes-window", features = ["winit_window", "unix_use_xcb_default"] }

edwardium_logger = "1.2.2"
